fixed overflow

--- a/src/app/ebc-svg/ebc-svg.component.scss
+++ b/src/app/ebc-svg/ebc-svg.component.scss
@@ -5,12 +5,12 @@
   
 	.content {
     padding: 1rem;
+		overflow: auto;
    
 	  @include crumb;
 
 		.card {
-			max-height: 70vh;
-			overflow: auto;
+			max-height: 65vh;
 
 			.disable {
 				color: md-color($warn); 
