--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -35,6 +35,10 @@
 				@include img;
 				max-width: 20vmin;
 			}
+
+			a {
+				cursor: pointer;
+			}
 		}
 
 		.find {
